# schemadrift

./: .gitignore  README.md  pyproject.toml  schemadrift.toml
scripts/: resource_metadata.py  sync_resource_metadata.py  test_rest_api.py
src/schemadrift/: __init__.py  hookspecs.py
src/schemadrift/cli/: __init__.py  main.py
src/schemadrift/connection/: __init__.py  interface.py  snowflake_impl.py
src/schemadrift/core/: __init__.py  base_object.py  comparison.py  config.py  diff_strategy.py  file_manager.py  service.py  yaml_utils.py
src/schemadrift/plugins/: __init__.py  hook_adapter.py  manager.py
src/schemadrift/plugins/builtin/: __init__.py
src/schemadrift/plugins/builtin/database/: __init__.py  model.py  tests.py
src/schemadrift/plugins/builtin/role/: __init__.py  model.py  tests.py
src/schemadrift/plugins/builtin/schema/: __init__.py  model.py  tests.py
src/schemadrift/plugins/builtin/table/: __init__.py  model.py  tests.py
src/schemadrift/plugins/builtin/view/: __init__.py  model.py  tests.py
tests/: __init__.py  conftest.py
tests/cli/: test_main.py
tests/connection/: test_mock_connection.py
tests/core/: test_base_object.py  test_comparison.py  test_config.py  test_diff_strategy.py  test_file_manager.py  test_resource_metadata.py  test_service.py  test_yaml_utils.py
tests/plugins/: test_hook_adapter.py  test_manager.py
